--- a/src/css/Rozcestnik.css
+++ b/src/css/Rozcestnik.css
@@ -1,13 +1,10 @@
-li {
-    
+li {  
     text-align: center;
-    margin: 20px;
     list-style-type: none;
-    font-size: 36px;
+    font-size: 3vw;
     font-family:Arial, Helvetica, sans-serif;
-    margin: 5px;
-    padding: 5px;
-    width: 50%;
+    margin: 2vw 20vw;
+    padding: 2vw;
     border-radius: 10px;
     background-color: #CC0000;
     color: white;
