--- a/src/css/CreateOrder.css
+++ b/src/css/CreateOrder.css
@@ -7,36 +7,41 @@
     overflow: hidden;
 }
 
+/*PRODUCTS*/
+
 .productContainer{
     display: flex;
     flex-flow: row wrap;
+    clear: both;
     justify-content: center;
-    margin: 0 10px;
+    margin: 0;
+    padding: 0;
 }
 
 .product{
     height: 100px;
     width: 150px;
     display: inline-block;
+    clear: both;
     background-color: #CC0000;
-    margin: 10px;
-    border: 3px solid black;
     border-radius: 10px;
-    padding: 5px;
+    margin: 5px 5px 0 5px;
+    text-align: left;
     position: relative;
 }
 
 .product > div{
     position: absolute;
+    left: 5px;
 }
 
 .productId{
     font-size: 10px;
-    top: 0;
+    top: 2px;
 }
 
 .productName{
-    top: 12px
+    top: 14px;
 }
 
 .productPrice{
@@ -44,16 +49,111 @@
     bottom: 0;
 }
 
-.cartProductContainer{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-}
+/*CART*/
 
 .cartProduct{
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 98%;
     display: inline-block;
-    background-color: yellow;
-    margin: 10px 5px;
+    background-color: #cc0000;
+    margin: 5px 1%;
+    position: relative;
+    float: left;
+    border-radius: 20px;
+}
+
+.cartProduct > div > div{
+    text-align: left;
+    position: absolute;
+}
+
+.cartProductId{
+    font-size: 10px;
+    height: 15px;
+    width: 38%;
+    top: 0px;
+    left: 2%;
+}
+
+.cartProductName{
+    height: 35px;
+    width: 38%;
+    left: 2%;
+    top: 15px;
+    line-height: 35px;
+}
+
+.cartProductAmount{
+    height: 25px;
+    width: 15%;
+    top: 0;
+    left: 40%;
+}
+
+.cartProductPrice{
+    height: 25px;
+    width: 15%;
+    top: 25px;
+    left: 40%;
+}
+
+.cartProductTotalPrice{
+    height: 50px;
+    width: 15%;
+    top: 0;
+    left: 55%;
+    line-height: 50px;
+}
+
+.cartProductButton {
+    height: 30px;
+    top: 10px;
+    line-height: 26px;
+    text-align: center;
+    position: absolute;
+    border-radius: 10px;
+    border: 2px solid white;
+    user-select: none;
+}
+
+.cartProductButton.Add {
+    width: 3%;
+    left: 70%;
+}
+
+.cartProductButton.Remove {
+    width: 3%;
+    left: 74%;
+}
+
+.cartProductButton.RemoveAll {
+    width: 10%;
+    left: 78%;
+}
+
+.submitOrder{
+    height: 30px;
+    width: 30%;
+    line-height: 30px;
+    border-radius: 10px;
+    margin: 5px 15px 10px;
+    background-color: #cc0000;
+    position: relative;
+    float: left;
+}
+
+.submitOrder:hover{
+    border: 2px solid black;
+    line-height: 26px;
+}
+
+.totalPrice{
+    height: 30px;
+    width: 30%;
+    line-height: 30px;
+    margin: 5px 15px 10px;
+    background-color: #cc0000;
+    position: relative;
+    float: right;
+    border-radius: 10px;
 }
