--- a/src/css/AddProduct.css
+++ b/src/css/AddProduct.css
@@ -1,9 +1,4 @@
-body{
-    background-color: white;
-}
-
-h1{
-    font-family:Arial, Helvetica, sans-serif;
+.addProductContainer > h1{
     font-size: 24px;
     margin: 5px;
     padding: 5px;
