--- a/src/css/CustomerOrderCheckout.css
+++ b/src/css/CustomerOrderCheckout.css
@@ -1,4 +1,4 @@
-.container{
+.customerOrderCheckoutcontainer{
     height: auto;
     width: 80vw;
     margin: 10vw;
@@ -7,12 +7,10 @@
     border-radius: 3vw ;
     color: white;
     font-weight: bold;
-    font-family: 'Poppins', sans-serif;
     text-align: center;
-    text-transform: uppercase;
 }
 
-.chosenOrderList{
+.customerOrderCheckoutcontainer .chosenOrderList{
     overflow: hidden;
     display: flex;
     flex-flow: row wrap;
@@ -20,7 +18,7 @@
     margin: 1vw 0vw;
 }
 
-.order{
+.customerOrderCheckoutcontainer .order {
     height: 8vw;
     width: 8vw;
     line-height: 8vw;
