--- a/src/css/CreateOrder.css
+++ b/src/css/CreateOrder.css
@@ -1,18 +1,6 @@
-.createOrdercontainer{
-    height: auto;
-    width: 1000px;
-    margin: 10px auto;
-    border: 5px solid black;
-    border-radius: 40px;
-    overflow: hidden;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-}
-
 /*PRODUCTS*/
 
-.createOrdercontainer .productContainer{
+.createOrderContainer .productContainer{
     display: flex;
     flex-flow: row wrap;
     clear: both;
@@ -21,7 +9,7 @@
     padding: 0;
 }
 
-.createOrdercontainer .product{
+.createOrderContainer .product{
     height: 100px;
     width: 150px;
     display: inline-block;
@@ -31,30 +19,37 @@
     margin: 5px 5px 0 5px;
     text-align: left;
     position: relative;
+    cursor: pointer;
+    color: white;
 }
 
-.createOrdercontainer .product > div{
+.createOrderContainer .product:hover{
+    outline: 2px solid black;
+    color: black;
+}
+
+.createOrderContainer .product > div{
     position: absolute;
     left: 5px;
 }
 
-.createOrdercontainer .productId{
+.createOrderContainer .productId{
     font-size: 10px;
     top: 2px;
 }
 
-.createOrdercontainer .productName{
+.createOrderContainer .productName{
     top: 14px;
 }
 
-.createOrdercontainer .productPrice{
+.createOrderContainer .productPrice{
     font-weight: bold;
     bottom: 0;
 }
 
 /*CART*/
 
-.createOrdercontainer .cartProduct{
+.createOrderContainer .cartProduct{
     height: 50px;
     width: 98%;
     display: inline-block;
@@ -63,22 +58,23 @@
     position: relative;
     float: left;
     border-radius: 20px;
+    color: white;
 }
 
-.createOrdercontainer .cartProduct > div > div{
+.createOrderContainer .cartProduct > div > div{
     text-align: left;
     position: absolute;
 }
 
-.createOrdercontainer .cartProductId{
+.createOrderContainer .cartProductId{
     font-size: 10px;
-    height: 15px;
+    height: 10px;
     width: 38%;
-    top: 0px;
+    top: 5px;
     left: 2%;
 }
 
-.createOrdercontainer .cartProductName{
+.createOrderContainer .cartProductName{
     height: 35px;
     width: 38%;
     left: 2%;
@@ -86,21 +82,21 @@
     line-height: 35px;
 }
 
-.createOrdercontainer .cartProductAmount{
+.createOrderContainer .cartProductAmount{
     height: 25px;
     width: 15%;
     top: 0;
     left: 40%;
 }
 
-.createOrdercontainer .cartProductPrice{
+.createOrderContainer .cartProductPrice{
     height: 25px;
     width: 15%;
     top: 25px;
     left: 40%;
 }
 
-.createOrdercontainer .cartProductTotalPrice{
+.createOrderContainer .cartProductTotalPrice{
     height: 50px;
     width: 15%;
     top: 0;
@@ -108,7 +104,7 @@
     line-height: 50px;
 }
 
-.createOrdercontainer .cartProductButton {
+.createOrderContainer .cartProductButton {
     height: 30px;
     top: 10px;
     line-height: 26px;
@@ -116,25 +112,30 @@
     position: absolute;
     border-radius: 10px;
     border: 2px solid white;
-    user-select: none;
+    cursor: pointer;
 }
 
-.createOrdercontainer .cartProductButton.Add {
+.createOrderContainer .cartProductButton:hover {
+    border: 2px solid black;
+    color: black;
+}
+
+.createOrderContainer .cartProductButton.Add {
     width: 3%;
     left: 70%;
 }
 
-.createOrdercontainer .cartProductButton.Remove {
+.createOrderContainer .cartProductButton.Remove {
     width: 3%;
     left: 74%;
 }
 
-.createOrdercontainer .cartProductButton.RemoveAll {
+.createOrderContainer .cartProductButton.RemoveAll {
     width: 10%;
     left: 78%;
 }
 
-.createOrdercontainer .submitOrder{
+.createOrderContainer .submitOrder{
     height: 30px;
     width: 30%;
     line-height: 30px;
@@ -143,14 +144,15 @@
     background-color: #cc0000;
     position: relative;
     float: left;
+    color: white;
 }
 
-.createOrdercontainer .submitOrder:hover{
-    border: 2px solid black;
-    line-height: 26px;
+.createOrderContainer .submitOrder:hover{
+    outline: 2px solid black;
+    color: black;
 }
 
-.createOrdercontainer .totalPrice{
+.createOrderContainer .totalPrice{
     height: 30px;
     width: 30%;
     line-height: 30px;
@@ -159,4 +161,5 @@
     position: relative;
     float: right;
     border-radius: 10px;
+    color: white;
 }
