--- a/src/css/CustomerOrderCheckout.css
+++ b/src/css/CustomerOrderCheckout.css
@@ -1,31 +1,19 @@
-.customerOrderCheckoutcontainer{
-    height: auto;
-    width: 80vw;
-    margin: 10vw;
-    overflow:hidden;
-    border: 1vw solid black;
-    border-radius: 3vw ;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-}
-
-.customerOrderCheckoutcontainer .chosenOrderList{
+.customerOrderCheckoutContainer .chosenOrderList{
     overflow: hidden;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    margin: 1vw 0vw;
+    margin: 10px 0;
 }
 
-.customerOrderCheckoutcontainer .order {
-    height: 8vw;
-    width: 8vw;
-    line-height: 8vw;
+.customerOrderCheckoutContainer .order {
+    height: 75px;
+    width: 75px;
+    line-height: 75px;
     background-color: #CC0000;
-    border-radius: 2vw;
-    margin: 1vw 0.5vw;
-    font-size: 4vw;
-    flex-grow: 3;
+    border-radius: 20px;
+    font-size: 50px;
     display: inline-block;
+    color: white;
+    margin: 10px;
 }
