--- a/src/css/CreateOrder.css
+++ b/src/css/CreateOrder.css
@@ -10,7 +10,7 @@
 }
 
 .createOrderContainer .product{
-    height: 100px;
+    height: 120px;
     width: 150px;
     display: inline-block;
     clear: both;
@@ -23,28 +23,47 @@
     color: white;
 }
 
-.createOrderContainer .product:hover{
-    outline: 2px solid black;
-    color: black;
-}
-
 .createOrderContainer .product > div{
     position: absolute;
-    left: 5px;
+    left: 3%;
+    width: 94%;
 }
 
 .createOrderContainer .productId{
-    font-size: 10px;
     top: 2px;
+    height: 12px;
+    font-size: 10px;
 }
 
 .createOrderContainer .productName{
     top: 14px;
+    font-size: 20px;
+    height: 42px;
+    overflow: hidden;
+    line-height: 21px;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.createOrderContainer .productDescription{
+    top: 56px;
+    font-size: 15px;
+    height: 32px;
+    overflow: hidden;
+    line-height: 16px;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .createOrderContainer .productPrice{
     font-weight: bold;
-    bottom: 0;
+    top: 88px;
+    font-size: 20px;
+    height: 24px;
 }
 
 /*CART*/
@@ -76,10 +95,15 @@
 
 .createOrderContainer .cartProductName{
     height: 35px;
-    width: 38%;
+    width: 36%;
     left: 2%;
     top: 15px;
     line-height: 35px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 .createOrderContainer .cartProductAmount{
@@ -115,11 +139,6 @@
     cursor: pointer;
 }
 
-.createOrderContainer .cartProductButton:hover {
-    border: 2px solid black;
-    color: black;
-}
-
 .createOrderContainer .cartProductButton.Add {
     width: 3%;
     left: 70%;
@@ -145,11 +164,7 @@
     position: relative;
     float: left;
     color: white;
-}
-
-.createOrderContainer .submitOrder:hover{
-    outline: 2px solid black;
-    color: black;
+    cursor: pointer;
 }
 
 .createOrderContainer .totalPrice{
@@ -162,4 +177,8 @@
     float: right;
     border-radius: 10px;
     color: white;
+}
+
+.createOrderContainer .submitOrder:hover, .createOrderContainer .cartProductButton:hover, .createOrderContainer .product:hover{
+    background-color: #aa0000;
 }
