Přidávání kategorií k produktu + autoformat

--- a/src/css/AddProduct.css
+++ b/src/css/AddProduct.css
@@ -3,7 +3,7 @@ body{
 }
 
 h1{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Popppins;
     font-size: 24px;
     margin: 5px;
     padding: 5px;
@@ -37,7 +37,7 @@ button {
     outline: none;
 }
 
-button:focus {
+button:hover {
     width: 300px;
     padding: 12px 20px;
     margin: 8px 4px;
@@ -45,6 +45,18 @@ button:focus {
     border: 1px solid black;
     border-radius: 4px;
     background-color: #aa0000;
+    color: white;
+    outline: none;
+}
+
+button:active {
+    width: 300px;
+    padding: 12px 20px;
+    margin: 8px 4px;
+    box-sizing: border-box;
+    border: 1px solid black;
+    border-radius: 4px;
+    background-color: #CC0000;
     color: white;
     outline: none;
 }
@@ -77,11 +89,35 @@ table, th, td, th{
     border: 1px solid black;
     border-collapse: collapse;
     padding: 3px;
+    color: black;
 }
 
 table td input{
     width: auto;
 }
 table td input:focus{
+    width: auto;
+}
+
+.message {
+    font-size: 1.2em;
+    text-align: center;
+    color: #36a936;
+    width: 50%;
+}
+
+.KategorieNazev{
+    color: black;
+}
+
+.CheckboxKategorie{
+    width: auto;
+}
+
+.CheckboxKategorie:active{
+    width: auto;
+}
+
+.CheckboxKategorie:focus{
     width: auto;
 }
