Obsah objednávek a snad finální úpravy, opravy a designové vylepšováky

--- a/src/css/BufWare.css
+++ b/src/css/BufWare.css
@@ -32,10 +32,13 @@ hr{
     height: auto;
     width: 1000px;
     margin: 10px auto;
-    border: 5px solid black;
-    border-radius: 20px;
-    overflow: hidden;
     color: black;
     text-align: center;
     user-select: none;
+}
+
+.containerBorder{
+    border: 5px solid #cc0000;
+    border-radius: 20px;
+    overflow: hidden;
 }
